# smallworld-app

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  PLAN.md  README.md  package.json  plan.html  pnpm-lock.yaml  project-plan.json  prompt.txt  railway.toml  vercel.json  visualizations.md
apps/api/: Dockerfile  Dockerfile.mcp  pyproject.toml
apps/api/src/smallworld_api/: config.py  main.py
apps/api/src/smallworld_api/mcp/: __main__.py  adapters.py  cli.py  resources.py  schemas.py  server.py  tools_point_context.py  tools_previews.py  tools_terrain.py  tools_viewpoints.py
apps/api/src/smallworld_api/models/: previews.py  style.py  terrain.py  viewpoints.py
apps/api/src/smallworld_api/routes/: previews.py  style.py  terrain.py
apps/api/src/smallworld_api/services/: analysis.py  features.py  (+21 more)
apps/api/tests/: test_analysis.py  test_bilinear_resample.py  test_camera_geometry.py  test_camera_safety.py  test_composition_templates.py  test_composition_verifier.py  test_derivatives.py  test_feature_extraction.py  test_fidelity_metadata.py  test_fractals.py  test_mcp_tools.py  test_point_context.py  test_point_elevation.py  test_preview_artifacts.py  test_preview_capabilities.py  test_preview_delegation_contract.py  test_preview_enhancement.py  test_preview_fallback.py  test_preview_route.py  test_provider_resolution.py  test_render_critic.py  test_scene_grouping.py  test_terrain_analysis_route.py  test_terrain_route.py  test_terrarium_decode.py  test_terrarium_fetch.py  test_tile_cache.py  test_tile_math.py  test_viewpoints_route.py  test_visibility.py
(+251 files in other folders)
